--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Ballads, Scots -- Scotland -- Texts'
 - !lcsh 'Ballads, English -- England -- Texts'
+- GITenberg
 title: English and Scottish Ballads, Volume 3 (of 8)
 url: http://www.gutenberg.org/ebooks/38037
